[package]
name = "yang-rs"
version = "0.1.1"
authors = ["Toshiaki Takada <toshi@reze.rs>"]
edition = "2018"
description = "YANG Parser Library"
repository = "https://github.com/sjtakada/yang-rs"
readme = "README.md"
keywords = ["YANG", "NETCONF", "parser"]
license	= "Apache-2.0"
categories = ["network-programming", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
lazy_static = "1.4.0"
quick-error = "2.0.1"
derive-getters = "0.2.0"
url = "2.2.2"

[features]
# Enables parsing some non-standard YANG constructs used in Cisco NSO
cisco-nso-extensions = []
